--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "dependencies": {
     "@nuxt/http": "^0.6.4",
-    "@nuxt/ui": "^2.12.3",
     "@nuxtjs/axios": "^5.13.6",
-    "flowbite": "^2.2.1"
+    "lucide-vue-next": "^0.316.0"
   }
 }
